Remove MaxPermSize from JVM options